--- a/pom.xml
+++ b/pom.xml
@@ -790,7 +790,7 @@
                         <executions>
                          <execution>
                              <goals>
-                                 <goal>check</goal>
+                                 <goal>aggregate</goal>
                              </goals>
                          </execution>
                         </executions>
