Subsystem token: edit subsystem UI updated

--- a/superfly-web/src/main/java/com/payneteasy/superfly/web/wicket/SuperflyApplication.properties
+++ b/superfly-web/src/main/java/com/payneteasy/superfly/web/wicket/SuperflyApplication.properties
@@ -30,6 +30,7 @@ subsystem.edit.title.Required=Title is required
 subsystem.edit.callback=Callback Info
 subsystem.edit.callback.Required=Callback Info is required
 subsystem.edit.send-callbacks=Send callbacks
+subsystem.edit.subsystemToken=Token
 subsystem.edit.subsystemUrl=Subsystem URL
 subsystem.edit.subsystemUrl.Required=Subsystem URL is required
 subsystem.edit.landingUrl=Landing URL
