--- a/superfly-service/pom.xml
+++ b/superfly-service/pom.xml
@@ -88,5 +88,9 @@
             <groupId>javax.mail</groupId>
             <artifactId>mail</artifactId>
         </dependency>
+        <dependency>
+            <groupId>com.warrenstrange</groupId>
+            <artifactId>googleauth</artifactId>
+        </dependency>
     </dependencies>
 </project>
