--- a/superfly-web/src/main/java/com/payneteasy/superfly/web/wicket/SuperflyApplication.properties
+++ b/superfly-web/src/main/java/com/payneteasy/superfly/web/wicket/SuperflyApplication.properties
@@ -59,6 +59,8 @@ user.create.password2=Password confirmation
 user.create.password2.EqualPasswordInputValidator=Password and confirmation must match
 user.create.password2.Required=Password confirmation is required
 user.create.publicKey=Public key
+user.create.otpTypeCode=OTP type
+user.create.isOtpOptional=Is OTP optional
 user.create.isAccountLocked=Account is locked
 user.create.name=Name
 user.create.name.Required=Name is required
@@ -106,3 +108,9 @@ smtpServer.username=Username
 smtpServer.password=Password
 smtpServer.from=From
 smtpServer.ssl=SSL
+
+#
+# OTP TYPE
+#
+otpType.none=None
+otpType.google_auth=Google Auth
