--- a/pom.xml
+++ b/pom.xml
@@ -709,6 +709,7 @@
                 <artifactId>maven-javadoc-plugin</artifactId>
                 <version>2.10.1</version>
                 <configuration>
+                    <source>${java.version}</source>
                     <!-- this is to disable JDK-supplied doclint which is too strict
                      causes the build to fail -->
                     <additionalparam>-Xdoclint:none</additionalparam>
