--- a/superfly-spi-support/pom.xml
+++ b/superfly-spi-support/pom.xml
@@ -3,7 +3,7 @@
     <parent>
         <artifactId>superfly-parent</artifactId>
         <groupId>com.payneteasy.superfly</groupId>
-        <version>1.7-18-SNAPSHOT</version>
+        <version>1.7-18</version>
     </parent>
     <artifactId>superfly-spi-support</artifactId>
     <name>Support classes for SPI mechanism</name>
