--- a/pom.xml
+++ b/pom.xml
@@ -568,7 +568,7 @@
             <dependency>
                 <groupId>mysql</groupId>
                 <artifactId>mysql-connector-java</artifactId>
-                <version>8.0.16</version>
+                <version>8.0.21</version>
             </dependency>
             <dependency>
                 <groupId>org.springframework</groupId>
@@ -797,6 +797,7 @@
                     <plugin>
                         <groupId>org.apache.maven.plugins</groupId>
                         <artifactId>maven-gpg-plugin</artifactId>
+                        <version>1.6</version>
                         <executions>
                             <execution>
                                 <id>sign-artifacts</id>
@@ -861,8 +862,8 @@
     <properties>
         <jdbcproc.version>1.1-4</jdbcproc.version>
         <slf4j.version>1.7.12</slf4j.version>
-        <spring.version>5.0.16.RELEASE</spring.version>
-        <spring.security.version>4.2.17.RELEASE</spring.security.version>
+        <spring.version>5.2.9.RELEASE</spring.version>
+        <spring.security.version>5.4.0</spring.security.version>
         <aspectj.version>1.6.5</aspectj.version>
 
         <wicket.version>7.6.0</wicket.version>
