--- a/pom.xml
+++ b/pom.xml
@@ -483,7 +483,7 @@
             <dependency>
                 <groupId>com.thoughtworks.xstream</groupId>
                 <artifactId>xstream</artifactId>
-                <version>1.4.11.1</version>
+                <version>1.4.13</version>
                 <exclusions>
                     <exclusion>
                         <groupId>xpp3</groupId>
@@ -501,7 +501,7 @@
             <dependency>
                 <groupId>com.github.spullara.mustache.java</groupId>
                 <artifactId>compiler</artifactId>
-                <version>0.9.0</version>
+                <version>0.9.6</version>
             </dependency>
 
             <dependency>
@@ -606,7 +606,7 @@
             <dependency>
                 <groupId>org.bouncycastle</groupId>
                 <artifactId>bcpg-jdk15on</artifactId>
-                <version>1.58</version>
+                <version>1.66</version>
             </dependency>
 
             <dependency>
@@ -683,12 +683,12 @@
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-enforcer-plugin</artifactId>
-                    <version>1.4</version>
+                    <version>3.0.0-M3</version>
                     <dependencies>
                         <dependency>
                             <groupId>org.codehaus.mojo</groupId>
                             <artifactId>extra-enforcer-rules</artifactId>
-                            <version>1.0-beta-3</version>
+                            <version>1.2</version>
                         </dependency>
                     </dependencies>
                 </plugin>
@@ -719,6 +719,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-enforcer-plugin</artifactId>
+                <version>3.0.0-M3</version>
                 <executions>
                     <execution>
                         <id>enforce-ban-duplicate-classes</id>
@@ -728,6 +729,9 @@
                         <configuration>
                             <rules>
                                 <banDuplicateClasses>
+                                    <ignoreClasses>
+                                        <ignoreClass>org.bouncycastle.*</ignoreClass>
+                                    </ignoreClasses>
                                     <findAllDuplicates>true</findAllDuplicates>
                                     <dependencies />
                                 </banDuplicateClasses>
