--- a/superfly-common/pom.xml
+++ b/superfly-common/pom.xml
@@ -2,7 +2,7 @@
     <parent>
         <artifactId>superfly-parent</artifactId>
         <groupId>com.payneteasy.superfly</groupId>
-        <version>1.7-19-SNAPSHOT</version>
+        <version>1.7-19</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
     <artifactId>superfly-common</artifactId>
