--- a/superfly-spi/pom.xml
+++ b/superfly-spi/pom.xml
@@ -3,7 +3,7 @@
     <parent>
         <artifactId>superfly-parent</artifactId>
         <groupId>com.payneteasy.superfly</groupId>
-        <version>1.7-20</version>
+        <version>1.7-21-SNAPSHOT</version>
     </parent>
     <groupId>com.payneteasy.superfly</groupId>
     <artifactId>superfly-spi</artifactId>
