--- a/superfly-web/src/main/webapp/WEB-INF/web.xml
+++ b/superfly-web/src/main/webapp/WEB-INF/web.xml
@@ -42,7 +42,16 @@
 
     <context-param>
         <param-name>superfly-policy</param-name>
-        <param-value>pcidss</param-value> <!-- none or pcidss -->
+        <param-value>none</param-value> <!-- none or pcidss -->
+    </context-param>
+
+    <context-param>
+        <param-name>superfly-cryptoSecret</param-name>
+        <param-value>GOOGLE_AUTH_OTP_SECRET</param-value>
+    </context-param>
+    <context-param>
+        <param-name>superfly-cryptoSalt</param-name>
+        <param-value>GOOGLE_AUTH_OTP_SALT</param-value>
     </context-param>
 
     <!-- multi-factor authentication-->
@@ -78,6 +87,7 @@
         <param-name>superfly-hotpCodeDigits</param-name>
         <param-value>6</param-value>
     </context-param>
+
     <context-param>
         <param-name>superfly-hotpLookahead</param-name>
         <param-value>10</param-value>
