--- a/superfly-client-opt/pom.xml
+++ b/superfly-client-opt/pom.xml
@@ -2,7 +2,7 @@
     <parent>
         <artifactId>superfly-parent</artifactId>
         <groupId>com.payneteasy.superfly</groupId>
-        <version>1.7-22</version>
+        <version>1.7-23-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
     <artifactId>superfly-client-opt</artifactId>
