--- a/superfly-service/pom.xml
+++ b/superfly-service/pom.xml
@@ -92,5 +92,9 @@
             <groupId>com.warrenstrange</groupId>
             <artifactId>googleauth</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.passay</groupId>
+            <artifactId>passay</artifactId>
+        </dependency>
     </dependencies>
 </project>
