[maven-release-plugin] prepare for next development iteration

--- a/superfly-httpclient-ssl/pom.xml
+++ b/superfly-httpclient-ssl/pom.xml
@@ -2,7 +2,7 @@
     <parent>
         <artifactId>superfly-parent</artifactId>
         <groupId>com.payneteasy.superfly</groupId>
-        <version>1.7-26</version>
+        <version>1.7-27-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
     <artifactId>superfly-httpclient-ssl</artifactId>
