--- a/superfly-web/src/main/webapp/WEB-INF/web.xml
+++ b/superfly-web/src/main/webapp/WEB-INF/web.xml
@@ -45,15 +45,6 @@
         <param-value>pcidss</param-value> <!-- none or pcidss -->
     </context-param>
 
-    <context-param>
-        <param-name>superfly-cryptoSecret</param-name>
-        <param-value>lsjdflsdifusodf87s8df78391231f</param-value>
-    </context-param>
-    <context-param>
-        <param-name>superfly-cryptoSalt</param-name>
-        <param-value>ssudyfsudifs8d7fsd8f6s8df72y2uy3tu23f48</param-value>
-    </context-param>
-
     <!-- multi-factor authentication -->
     <context-param>
         <param-name>superfly-mfa-enabled</param-name>
@@ -112,7 +103,17 @@
     <context-param>
            <param-name>superfly-max-sso-session-age-minutes</param-name>
            <param-value>30</param-value>
-       </context-param>
+    </context-param>
+
+    <context-param>
+        <param-name>superfly-cryptoSecret</param-name>
+        <param-value>GOOGLE_AUTH_OTP_SECRET</param-value>
+    </context-param>
+
+    <context-param>
+        <param-name>superfly-cryptoSalt</param-name>
+        <param-value>GOOGLE_AUTH_OTP_SALT</param-value>
+    </context-param>
 
     <listener>
         <listener-class>ch.qos.logback.ext.spring.web.LogbackConfigListener</listener-class>
