--- a/pom.xml
+++ b/pom.xml
@@ -444,6 +444,11 @@
                 </exclusions>
             </dependency>
             <dependency>
+                <groupId>commons-codec</groupId>
+                <artifactId>commons-codec</artifactId>
+                <version>1.15</version>
+            </dependency>
+            <dependency>
                 <!--override googleauth's httpclient version-->
                 <groupId>org.apache.httpcomponents</groupId>
                 <artifactId>httpclient</artifactId>
