--- a/superfly-service/pom.xml
+++ b/superfly-service/pom.xml
@@ -89,6 +89,10 @@
             <artifactId>googleauth</artifactId>
         </dependency>
         <dependency>
+            <groupId>commons-codec</groupId>
+            <artifactId>commons-codec</artifactId>
+        </dependency>
+        <dependency>
             <groupId>org.passay</groupId>
             <artifactId>passay</artifactId>
         </dependency>
