--- a/superfly-client-opt/pom.xml
+++ b/superfly-client-opt/pom.xml
@@ -10,6 +10,10 @@
     <description>Optional Superfly-related client features (like SSL support)</description>
     <dependencies>
         <dependency>
+            <groupId>com.sun.xml.bind</groupId>
+            <artifactId>jaxb-impl</artifactId>
+        </dependency>
+        <dependency>
             <groupId>commons-httpclient</groupId>
             <artifactId>commons-httpclient</artifactId>
         </dependency>
