--- a/pom.xml
+++ b/pom.xml
@@ -180,6 +180,12 @@
             </dependency>
 
             <dependency>
+                <groupId>com.sun.xml.bind</groupId>
+                <artifactId>jaxb-impl</artifactId>
+                <version>4.0.4</version>
+            </dependency>
+
+            <dependency>
                 <groupId>org.springframework</groupId>
                 <artifactId>spring-core</artifactId>
                 <version>${spring.version}</version>
@@ -643,7 +649,7 @@
             <dependency>
                 <groupId>org.easymock</groupId>
                 <artifactId>easymock</artifactId>
-                <version>3.0</version>
+                <version>5.2.0</version>
                 <scope>test</scope>
                 <exclusions>
                     <exclusion>
@@ -766,7 +772,7 @@
             <plugin>
                 <groupId>org.gaul</groupId>
                 <artifactId>modernizer-maven-plugin</artifactId>
-                <version>1.3.0</version>
+                <version>2.7.0</version>
                 <configuration>
                     <javaVersion>${java.version}</javaVersion>
                     <ignorePackages />
@@ -882,7 +888,7 @@
         <maven.compiler.showWarnings>true</maven.compiler.showWarnings>
         <project.build.sourceEncoding>utf-8</project.build.sourceEncoding>
 
-        <java.version>1.8</java.version>
+        <java.version>17</java.version>
         <modernizer.failOnViolations>true</modernizer.failOnViolations>
         <fail.on.dup.dependency>true</fail.on.dup.dependency>
         <owasp.dependencyCheck.version>8.2.1</owasp.dependencyCheck.version>
