--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
     <parent>
         <groupId>org.sonatype.oss</groupId>
         <artifactId>oss-parent</artifactId>
-        <version>4</version>
+        <version>9</version>
     </parent>
     <groupId>com.payneteasy.superfly</groupId>
     <artifactId>superfly-parent</artifactId>
@@ -487,7 +487,7 @@
             <dependency>
                 <groupId>com.caucho</groupId>
                 <artifactId>hessian</artifactId>
-                <version>4.0.7</version>
+                <version>4.0.66</version>
             </dependency>
 
             <dependency>
@@ -692,7 +692,7 @@
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-enforcer-plugin</artifactId>
-                    <version>3.0.0-M3</version>
+                    <version>3.4.1</version>
                     <dependencies>
                         <dependency>
                             <groupId>org.codehaus.mojo</groupId>
@@ -701,18 +701,16 @@
                         </dependency>
                     </dependencies>
                 </plugin>
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-war-plugin</artifactId>
+                    <version>3.4.0</version>
+                </plugin>
             </plugins>
         </pluginManagement>
 
         <plugins>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-eclipse-plugin</artifactId>
-                <version>2.8</version>
-                <configuration>
-                    <ajdtVersion>none</ajdtVersion>
-                </configuration>
-            </plugin>
+
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-javadoc-plugin</artifactId>
@@ -728,7 +726,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-enforcer-plugin</artifactId>
-                <version>3.0.0-M3</version>
+                <version>3.4.1</version>
                 <executions>
                     <execution>
                         <id>enforce-ban-duplicate-classes</id>
@@ -873,7 +871,7 @@
     </profiles>
 
     <properties>
-        <jdbcproc.version>1.1-4</jdbcproc.version>
+        <jdbcproc.version>1.1-25</jdbcproc.version>
         <slf4j.version>2.0.9</slf4j.version>
         <spring.version>5.3.29</spring.version>
         <spring.security.version>5.5.8</spring.security.version>
