--- a/superfly-client/pom.xml
+++ b/superfly-client/pom.xml
@@ -10,27 +10,33 @@
     <description>Contains classes used to use Superfly facilities by clients</description>
     <dependencies>
         <dependency>
+            <!--Justification: Remote API for interacting with SuperFly services -->
             <groupId>com.payneteasy.superfly</groupId>
             <artifactId>superfly-remote-api</artifactId>
         </dependency>
         <dependency>
+            <!--Justification: Common utilities and shared functionality for SuperFly components -->
             <groupId>com.payneteasy.superfly</groupId>
             <artifactId>superfly-common</artifactId>
         </dependency>
         <dependency>
+            <!--Justification: Logging API for the application -->
             <groupId>org.slf4j</groupId>
             <artifactId>slf4j-api</artifactId>
         </dependency>
         <dependency>
+            <!--Justification: Provides the Servlet API, necessary for web applications; marked as provided since it's provided by the servlet container -->
             <groupId>javax.servlet</groupId>
             <artifactId>javax.servlet-api</artifactId>
         </dependency>
         <dependency>
+            <!--Justification: Provides standard annotations used in Java applications -->
             <groupId>javax.annotation</groupId>
             <artifactId>javax.annotation-api</artifactId>
         </dependency>
 
         <dependency>
+            <!--Justification: Core functionality for Spring Security; managing authentication, authorization, and security configurations -->
             <groupId>org.springframework.security</groupId>
             <artifactId>spring-security-core</artifactId>
             <scope>test</scope>
