--- a/superfly-spi-support/pom.xml
+++ b/superfly-spi-support/pom.xml
@@ -11,10 +11,12 @@
 
     <dependencies>
         <dependency>
+            <!--Justification: Factory for creating DAO objects with JDBC -->
             <groupId>com.googlecode.jdbc-proc.jdbc-proc</groupId>
             <artifactId>jdbc-proc-daofactory</artifactId>
         </dependency>
         <dependency>
+            <!--Justification: Remote API for interacting with SuperFly services -->
             <groupId>com.payneteasy.superfly</groupId>
             <artifactId>superfly-remote-api</artifactId>
         </dependency>
