--- a/superfly-spi/pom.xml
+++ b/superfly-spi/pom.xml
@@ -11,6 +11,7 @@
     <description>Interfaces for implementations of internal matters like HOTP processing</description>
     <dependencies>
         <dependency>
+            <!--Justification: SPI support for integrating SuperFly with other services/components -->
             <groupId>com.payneteasy.superfly</groupId>
             <artifactId>superfly-spi-support</artifactId>
         </dependency>
