#96 - make project runnable on JDK 21, minor bug fix - when cloning a user (in error case feedback element with error text was empty)

--- a/superfly-client-opt/pom.xml
+++ b/superfly-client-opt/pom.xml
@@ -76,6 +76,12 @@
         </dependency>
 
         <dependency>
+            <!--Justification: Bouncy Castle API for cryptography functions -->
+            <groupId>org.bouncycastle</groupId>
+            <artifactId>bcprov-jdk18on</artifactId>
+        </dependency>
+
+        <dependency>
             <!--Justification: Logback implementation for SLF4J, provides logging capabilities -->
             <groupId>ch.qos.logback</groupId>
             <artifactId>logback-classic</artifactId>
