--- a/pom.xml
+++ b/pom.xml
@@ -671,6 +671,13 @@
             <dependency>
                 <!--Justification: Bouncy Castle API for cryptography functions -->
                 <groupId>org.bouncycastle</groupId>
+                <artifactId>bcprov-jdk18on</artifactId>
+                <version>1.75</version>
+            </dependency>
+
+            <dependency>
+                <!--Justification: Bouncy Castle API for cryptography functions -->
+                <groupId>org.bouncycastle</groupId>
                 <artifactId>bcpg-jdk18on</artifactId>
                 <version>1.75</version>
             </dependency>
@@ -959,7 +966,7 @@
         <maven.compiler.showWarnings>true</maven.compiler.showWarnings>
         <project.build.sourceEncoding>utf-8</project.build.sourceEncoding>
 
-        <java.version>17</java.version>
+        <java.version>21</java.version>
         <modernizer.failOnViolations>true</modernizer.failOnViolations>
         <fail.on.dup.dependency>true</fail.on.dup.dependency>
         <owasp.dependencyCheck.version>8.2.1</owasp.dependencyCheck.version>
