SSOService remote api controller

--- a/pom.xml
+++ b/pom.xml
@@ -754,7 +754,12 @@
                     </exclusion>
                 </exclusions>
             </dependency>
-
+            <dependency>
+                <!--Justification: Gson is a Java library that can be used to convert Java Objects into their JSON representation. It can also be used to convert a JSON string to an equivalent Java object. -->
+                <groupId>com.google.code.gson</groupId>
+                <artifactId>gson</artifactId>
+                <version>2.12.1</version>
+            </dependency>
             <dependency>
                 <!--Justification: Library for validating passwords and implementing password policies -->
                 <groupId>org.passay</groupId>
