--- a/superfly-remote-api/pom.xml
+++ b/superfly-remote-api/pom.xml
@@ -9,6 +9,11 @@
     <artifactId>superfly-remote-api</artifactId>
     <name>Superfly Remote API</name>
     <description>API classes for Superfly server which can be used by clients</description>
+
+    <properties>
+        <java.version>8</java.version>
+    </properties>
+    
     <dependencies>
         <dependency>
             <groupId>com.sun.xml.bind</groupId>
