--- a/pom.xml
+++ b/pom.xml
@@ -111,6 +111,12 @@
             <id>atlassian-m2-repository</id>
             <url>https://maven.atlassian.com/content/groups/public/</url>
         </repository>
+        <repository>
+            <id>pne</id>
+            <name>payneteasy repo</name>
+            <url>https://maven.pne.io</url>
+        </repository>
+
         <!-- ibiblio mirror for some artifacts -->
 <!--
         <repository>
@@ -196,9 +202,10 @@
             </dependency>
 
             <dependency>
-                <groupId>com.sun.xml.bind</groupId>
-                <artifactId>jaxb-impl</artifactId>
-                <version>4.0.4</version>
+                <!-- Justification: Data format extension for Jackson to offer alternative support for serializing POJOs as XML and deserializing XML as pojos.-->
+                <groupId>com.fasterxml.jackson.dataformat</groupId>
+                <artifactId>jackson-dataformat-xml</artifactId>
+                <version>2.18.3</version>
             </dependency>
 
             <dependency>
@@ -303,6 +310,19 @@
                         <groupId>org.springframework</groupId>
                     </exclusion>
                 </exclusions>
+            </dependency>
+
+            <dependency>
+                <!--Justification: Paynet http client API.-->
+                <groupId>com.payneteasy.http-client</groupId>
+                <artifactId>http-client-api</artifactId>
+                <version>1.0-8</version>
+            </dependency>
+            <dependency>
+                <!--Justification: Paynet http client API.-->
+                <groupId>com.payneteasy.http-client</groupId>
+                <artifactId>http-client-impl</artifactId>
+                <version>1.0-8</version>
             </dependency>
 
             <dependency>
@@ -625,6 +645,12 @@
                 <groupId>org.apache.commons</groupId>
                 <artifactId>commons-dbcp2</artifactId>
                 <version>2.13.0</version>
+                <exclusions>
+                    <exclusion>
+                        <groupId>commons-logging</groupId>
+                        <artifactId>commons-logging</artifactId>
+                    </exclusion>
+                </exclusions>
             </dependency>
             <dependency>
                 <!--Justification:  Commons Object Pooling Library-->
