--- a/superfly-client-opt/pom.xml
+++ b/superfly-client-opt/pom.xml
@@ -10,8 +10,9 @@
     <description>Optional Superfly-related client features (like SSL support)</description>
     <dependencies>
         <dependency>
-            <groupId>com.sun.xml.bind</groupId>
-            <artifactId>jaxb-impl</artifactId>
+            <!-- Justification: Data format extension for Jackson to offer alternative support for serializing POJOs as XML and deserializing XML as pojos.-->
+            <groupId>com.fasterxml.jackson.dataformat</groupId>
+            <artifactId>jackson-dataformat-xml</artifactId>
         </dependency>
         <dependency>
             <!--Justification: HTTP requests handling library. -->
