--- a/superfly-client/pom.xml
+++ b/superfly-client/pom.xml
@@ -10,6 +10,12 @@
     <description>Contains classes used to use Superfly facilities by clients</description>
     <dependencies>
         <dependency>
+            <!-- Justification: Data format extension for Jackson to offer alternative support for serializing POJOs as XML and deserializing XML as pojos.-->
+            <groupId>com.fasterxml.jackson.dataformat</groupId>
+            <artifactId>jackson-dataformat-xml</artifactId>
+            <version>2.18.3</version>
+        </dependency>
+        <dependency>
             <!--Justification: Remote API for interacting with SuperFly services -->
             <groupId>com.payneteasy.superfly</groupId>
             <artifactId>superfly-remote-api</artifactId>
