--- a/superfly-service/pom.xml
+++ b/superfly-service/pom.xml
@@ -32,8 +32,9 @@
         </dependency>
 
         <dependency>
-            <groupId>com.sun.xml.bind</groupId>
-            <artifactId>jaxb-impl</artifactId>
+            <!-- Justification: Data format extension for Jackson to offer alternative support for serializing POJOs as XML and deserializing XML as pojos.-->
+            <groupId>com.fasterxml.jackson.dataformat</groupId>
+            <artifactId>jackson-dataformat-xml</artifactId>
         </dependency>
 
         <dependency>
